This should finally nail #5415: * Since the same block can be in up to two transactions, it's very well possible   that one shouldn't write all transactions in a single run. * Forgot to pass on the iterator from BlockWriter::Add(transaction) to   Add(block).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@35565 a95241bf-73f2-0310-859d-f6bbb57e9c96